# InkPersona

./: .env.example  .gitignore  README.md  app.py  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy-hf-space.yml
backend/: requirements.txt
backend/app/: analyzer.py  config.py  main.py  preprocessing.py  prompt.py  traits.py
backend/tests/: test_api.py  test_model_normalization.py  test_preprocessing.py  test_traits.py
datasets/: README.md  dataset-registry.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.test.jsx  api.js  styles.css
tests/: test_gradio_app.py
