[project]
name = "inkpersona"
version = "0.1.0"
description = "Hugging Face Spaces / Gradio app for cautious handwriting persona readings."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Abhinav Gavireddi", email = "abhinavgavireddi@gmail.com" }
]
dependencies = [
  "fastapi==0.115.6",
  "gradio==5.9.1",
  "openai==1.59.8",
  "pillow==11.1.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.20",
  "requests==2.32.3",
  "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
